# linexin-updater

./: PKGBUILD  README.md  linexin-updater-legacy  linexin-updater.install  linexin-updater.pot  linexin-updater.py  pyproject.toml
applications/: github.petexy.linexinupdater.desktop
locale/de/LC_MESSAGES/: linexin-updater.mo
locale/es/LC_MESSAGES/: linexin-updater.po
locale/fr/LC_MESSAGES/: linexin-updater.mo  linexin-updater.po
locale/pl/LC_MESSAGES/: linexin-updater.mo  linexin-updater.po
locale/ru/LC_MESSAGES/: linexin-updater.mo  linexin-updater.po
pkg/linexin-updater/: .BUILDINFO  .INSTALL  .MTREE  .PKGINFO
pkg/linexin-updater/usr/share/applications/: github.petexy.linexinupdater.desktop
pkg/linexin-updater/usr/share/linexin/widgets/: a-system_updater.py
src/: linexin-updater
src/applications/: github.petexy.linexinupdater.desktop
src/locale/de/LC_MESSAGES/: linexin-updater.po
src/locale/es/LC_MESSAGES/: linexin-updater.mo
src/usr/share/applications/: github.petexy.linexinupdater.desktop
src/usr/share/libalpm/hooks/: zz-linexin-os-release.hook
src/usr/share/linexin/widgets/: a-system_updater.py
src/usr/share/linexin/widgets/localization/de_DE/: system_updater_dictionary.py
src/usr/share/linexin/widgets/localization/en_US/: system_updater_dictionary.py
src/usr/share/linexin/widgets/localization/es_ES/: system_updater_dictionary.py
src/usr/share/linexin/widgets/localization/fr_FR/: system_updater_dictionary.py
src/usr/tmp/gnome-background-properties/: 1fennec.xml
(+10 files in other folders)
